Реализовала улучшения игры

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
       return (height * 0.33);
     }
   </script>
+  <script type="text/javascript" src="js/stat.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
 </body>
 </html>
